--- a/css/quicktrade.css
+++ b/css/quicktrade.css
@@ -18,19 +18,18 @@
   bottom: 3px;
   color: var(--nero);
   font-family: "Segoe UI", Helvetica;
-  font-size: 20px;
   height: 119px;
   left: 23px;
   letter-spacing: 0.00px;
   line-height: 30px;
   position: absolute;
   text-align: left;
-  width: calc(100.00% - 21px);
+  width: 90%;
 }
 .quicktrade .active-swap-request-JVMFxg {
   background-color: transparent;
   height: 49px;
-  left: 0px;
+  left: -1px;
   letter-spacing: 0.00px;
   line-height: 35px;
   position: absolute;
@@ -170,9 +169,9 @@
 .quicktrade .everything-you-se-our-services-y1HRxC {
   background-color: transparent;
   height: auto;
-  left: 9%;
+  left: 10%;
   letter-spacing: 0.00px;
-  line-height: 32px;
+  line-height: 53px;
   position: absolute;
   text-align: left;
   top: 253px;
@@ -182,7 +181,7 @@
 .quicktrade .features-of-quick-trade-HRxdjE {
   background-color: transparent;
   height: 29px;
-  left: 41px;
+  left: 5px;
   letter-spacing: 0.00px;
   line-height: 30px;
   position: absolute;
@@ -270,7 +269,7 @@
 }
 .quicktrade .grey-back-y1HRxC {
   background-color: rgba(238,238,238,1.0);
-  height: 80%;
+  height: 106%;
   position: absolute;
   top: 53px;
   width: 100%;
@@ -340,7 +339,7 @@
   background-color: transparent;
   bottom: 0px;
   height: 141px;
-  left: 54px;
+  left: 13px;
   position: absolute;
   width:90%;
   top: 54%;
@@ -414,7 +413,7 @@
   margin-left: 2%;
   object-fit: cover;
   position: absolute;
-  top: 104px;
+  top: 107px;
   width: 95%;
 }
 .quicktrade .line-10-0xy0vn {
@@ -445,8 +444,8 @@
   margin-left: 4%;
   object-fit: cover;
   position: relative;
-  top: 42px;
   width: 94%;
+  margin-top: 13%;
 }
 .quicktrade .line-9-0xy0vn {
   background-color: transparent;
@@ -612,7 +611,7 @@
   background-color: transparent;
   color: var(--nero);
   font-family: 'SegoeUI-Regular', Helvetica;
-  font-size: 25px;
+  font-size: 37.5px;
   font-style: normal;
   font-weight: 400;
   height: auto;
@@ -637,7 +636,7 @@
 .quicktrade .the-activity-of-more-currencies-HRxdjE {
   background-color: transparent;
   height: 59px;
-  left: 23px;
+  left: 3px;
   letter-spacing: 0.00px;
   line-height: 30px;
   position: absolute;
@@ -699,33 +698,30 @@
 
 
 @media (min-width: 2000px) {
-  .quicktrade .grey-back-y1HRxC{
-    height: 85%;
-  }
   .quicktrade .swapslogoimage-transparent-y1HRxC {
     margin-top: -22%;
   }
   .quicktrade .swaps-fx-user-guide-y1HRxC {
-    font-size: 31px;
+    font-size: 46.5px;
   }
   .quicktrade .swaps-fx-portal-user-guide-y1HRxC {
-    font-size: 90px;
-    line-height: 104px;
+    font-size: 150px;
+    line-height: 143px;
     top: 239px;
   }
   .quicktrade .everything-you-se-our-services-y1HRxC {
-    top: 441px;
-    width: 538px;
-    font-size: 34px !important;
+    top: 540px;
+    width: 612px;
+    font-size: 51px !important;
   }
-  .quicktrade .line-8-0xy0vn {
-    top: 54px !important;
+  .quicktrade .quick-trade-y1HRxC {
+    font-size: 125px !important;
   }
   .oswald-light-nero-35px {
-    font-size: 41px !important;
+    font-size: 53px !important;
   }
   .segoeui-regular-normal-nero-20px {
-    font-size: 24px !important;
+    font-size: 28px !important;
   }
   .quicktrade .quick-swap-T8HKK8 {
     margin-top: -292px !important;
@@ -743,21 +739,26 @@
 
 
 @media (max-width: 2000px) {
-  .quicktrade .grey-back-y1HRxC {
-    height: 83%;
-  }
   .quicktrade .swapslogoimage-transparent-y1HRxC {
     margin-top: -18%;
   }
   .quicktrade .swaps-fx-portal-user-guide-y1HRxC {
-    font-size: 70px;
-    line-height: 78px;
+    font-size: 105px;
+    line-height: 96px;
     top: 190px;
   }
   .quicktrade .everything-you-se-our-services-y1HRxC {
-    top: 345px;
+    top: 382px;
     width: 581px;
-    font-size: 31px !important;
+    font-size: 46.5px !important;
+  }
+  .quicktrade .quick-trade-y1HRxC {
+    top: 135%;
+    font-size: 91.5px;
+  }
+  
+  .quicktrade .line-8-0xy0vn {
+    margin-top: 15%;
   }
 }
 
@@ -765,18 +766,33 @@
 
 
 @media (min-width: 1500px) {
-  .quicktrade .quick-trade-y1HRxC {
-    font-size: 66px !important;
+  .quicktrade .grey-back-y1HRxC {
+    height: 104%;
   }
-  .quicktrade .line-8-0xy0vn {
-    top: 57px;
-    font-size: 44px;
+  .quicktrade .line-1-y1HRxC {
+    top: 110px;
+  }
+  .quicktrade .quick-trade-y1HRxC {
+    font-size: 82px !important;
+    top: 129%;
+  }
+  .quicktrade .active-swap-request-JVMFxg {
+    left: -10px;
   }
   .oswald-light-nero-35px {
-    font-size: 38px;
+    font-size: 45px;
+  }
+  .quicktrade .the-activity-of-more-currencies-HRxdjE {
+    top: 64px;
   }
   .segoeui-regular-normal-nero-20px {
-    font-size: 22px;
+    font-size: 24px;
+  }
+  .quicktrade .features-of-quick-trade-HRxdjE {
+    top: 146px;
+  }
+  .quicktrade .group-7-HRxdjE {
+    top: 71%;
   }
   .quicktrade .quick-swap-T8HKK8 {
     margin-top: -275px;
@@ -791,17 +807,17 @@
 
 @media (max-width: 1500px) {
   .quicktrade .swaps-fx-portal-user-guide-y1HRxC {
-    font-size: 51px;
-    line-height: 60px;
+    font-size: 78px;
+    line-height: 71px;
     top: 190px;
   }
   .quicktrade .everything-you-se-our-services-y1HRxC {
-    top: 309px;
-    font-size: 30px !important;
+    top: 338px;
+    font-size: 43px !important;
     width: 500px;
   }
   .quicktrade .quick-trade-y1HRxC {
-    font-size: 39px;
+    font-size: 68px !important;
   }
   .oswald-light-nero-35px {
     font-size: 35px;
@@ -809,34 +825,49 @@
   .segoeui-regular-normal-nero-20px {
     font-size: 20px;
   }
+  
+  .quicktrade .line-8-0xy0vn {
+    margin-top: 17%;
+  }
 }
 
 
 
 
 @media (max-width: 1200px) {
+  .quicktrade .grey-back-y1HRxC {
+    height: 91%;
+  }
   .quicktrade .swapslogoimage-transparent-y1HRxC {
-    margin-left: 17%;
-    width: 123%;
-    margin-top: -16%;
+    margin-left: 6%;
+    width: 138%;
+    margin-top: -23%;
   }
   .quicktrade .swaps-fx-user-guide-y1HRxC {
-    font-size: 20px;
+    font-size: 30px;
     top: 57px;
   }
   .quicktrade .line-1-y1HRxC {
     top: 85px;
   }
   .quicktrade .swaps-fx-portal-user-guide-y1HRxC {
-    font-size: 44px;
-    line-height: 48px;
+    font-size: 62px;
+    line-height: 61px;
     top: 155px;
   }
   .quicktrade .everything-you-se-our-services-y1HRxC {
-    top: 253px;
-    font-size: 24px !important;
-    width: 384px;
-    line-height: 32px;
+    top: 278px;
+    font-size: 42px !important;
+    width: 500px;
+    line-height: 37px;
+  }
+  .quicktrade .quick-trade-y1HRxC {
+    font-size: 54px !important;
+    top: 119%;
+  }
+  
+  .quicktrade .line-8-0xy0vn {
+    margin-top: 15%;
   }
   .oswald-light-nero-35px {
     font-size: 32px !important;
@@ -863,7 +894,7 @@
     top: -124px;
   }
   .quicktrade .features-of-quick-trade-HRxdjE {
-    top: 142px;
+    top: 131px;
   }
   .quicktrade .group-7-HRxdjE {
     top: 60%;
@@ -886,35 +917,30 @@
 
 @media (max-width: 900px) {
   .quicktrade .grey-back-y1HRxC{
-    height: 75%;
+    height: 125%;
   }
   .quicktrade .swapslogoimage-transparent-y1HRxC {
-    margin-left: 6%;
-    width: 138%;
-    margin-top: -12%;
-  }
-  .quicktrade .swaps-fx-user-guide-y1HRxC {
-    font-size: 20px;
-    top: 57px;
+    margin-left: 29%;
+    width: 104%;
+    margin-top: -11%;
   }
   .quicktrade .swaps-fx-portal-user-guide-y1HRxC {
-    font-size: 26px;
-    line-height: 30px;
-    top: 125px;
-    left: 11%;
+    font-size: 41px;
+    line-height: 51px;
+    top: 155px;
   }
   .quicktrade .everything-you-se-our-services-y1HRxC {
-    top: 187px;
-    font-size: 16px !important;
-    width: 247px;
-    line-height: 19px;
-    left: 11%;
+    top: 256px;
+    font-size: 31px !important;
+    width: 378px;
+    line-height: 34px;
   }
   .quicktrade .quick-trade-y1HRxC {
-    font-size: 28px;
+    font-size: 39px !important;
+    margin-top: 15%;
   }
   .quicktrade .line-8-0xy0vn {
-    top: 37px;
+    margin-top: 29%;
   }
   .quicktrade .flex-row-0xy0vn {
     flex-direction: column;
@@ -932,11 +958,14 @@
   }
   .quicktrade .features-of-quick-trade-HRxdjE {
     top: 37%;
-    margin-left: -6%;
+    margin-left: -21px;
+  }
+  .quicktrade .what-is-quick-t-ing-on-swaps-fx-HRxdjE {
+    left: -20px;
   }
   .quicktrade .group-7-HRxdjE {
     top: 51%;
-    margin-left: -7%;
+    margin-left: -21px;
   }
   .oswald-light-nero-35px {
     font-size: 35px !important;
@@ -945,7 +974,7 @@
     font-size: 18px !important;
   } 
   .quicktrade .the-activity-of-more-currencies-HRxdjE {
-    margin-left: -3%;
+    margin-left: -20px;
   }
   .quicktrade .flex-row-oV5UrE {
     flex-direction: column;
@@ -983,17 +1012,16 @@
   .quicktrade .group-3-ossvxU {
     margin-left: 12%;
     width: 85%;
-    margin-top: 40%;
   }
   .quicktrade .a-summary-view-the-marketplace-JVMFxg {
     line-height: 15px;
-    left: 7px;
+    left: 30px;
   }
   .segoeui-regular-normal-nero-20px .quicktrade .group-6-wbR61n {
     font-size: 13px;
   }
   .quicktrade .lines {
-    left: 8%;
+    left: 22%;
   }
   .quicktrade .polygon-1-nlxkfa {
     height: 37px;
@@ -1008,21 +1036,30 @@
 
   }
   .quicktrade .head {
-    font-size: 22px !important;
-    left: 21%;
-  }
-  .quicktrade .word {
-    font-size: 16px !important;
+    left: 1%;
   }
   .quicktrade .flex-row-C61RwL {
     margin-top: 5%;
   }
   .quicktrade .group-5-dXBp89 {
-    height: 468px;
+    width: 90%;
     margin-top: 1%;
+    margin-left: 15%;
   }
   .quicktrade .group-6-wbR61n {
-    height: 375px;
+    height: 280px;
+    left: 6px;
+  }
+  .quicktrade .flex-row-C61RwL {
+    flex-direction: column;
+  }
+  .quicktrade .flex-col-dXBp89 {
+    width: 90%;
+    margin-top: -15%;
+    margin-left: 3%;
+  }
+  .quicktrade .active-swap-request-JVMFxg {
+    left: 9px;
   }
 }
 
@@ -1031,37 +1068,32 @@
 @media (max-width: 600px) {
   .quicktrade .grey-back-y1HRxC{
     top: 23px;
-    height: 85%;
-  }
-  .quicktrade .swapslogoimage-transparent-y1HRxC {
-    margin-left: 6%;
-    width: 140%;
-    margin-top: -11%;
+    height: 129%;
   }
   .quicktrade .swaps-fx-user-guide-y1HRxC {
-    font-size: 15px;
+    font-size: 22.5px;
     top: 48px;
   }
   .quicktrade .line-1-y1HRxC {
-    top: 70px;
+    top: 74px;
   }
   .quicktrade .swaps-fx-portal-user-guide-y1HRxC {
-    font-size: 20px;
-    line-height: 22px;
-    top: 125px;
+    font-size: 32px;
+    line-height: 31px;
+    top: 109px;
   }
   .quicktrade .everything-you-se-our-services-y1HRxC {
     top: 169px;
-    font-size: 12px !important;
-    width: 187px;
-    line-height: 18px;
+    font-size: 18px !important;
+    width: 205px;
+    line-height: 20px;
   }
   .quicktrade .quick-trade-y1HRxC {
-    font-size: 17px;
-    margin-top: 0px;
+    font-size: 25px;
+    margin-top: 11%;
   }
   .quicktrade .line-8-0xy0vn {
-    margin-top: -11px;
+    margin-top: 26%;
   }
   .oswald-light-nero-35px {
     font-size: 27px !important;
@@ -1071,14 +1103,19 @@
   } 
   .quicktrade .the-activity-of-more-currencies-HRxdjE {
     top: 15%;
+    margin-left: -5%;
+  }
+  .quicktrade .easily-select-y-your-swap-order-T8HKK8 {
+    margin-left: 4%;
   }
   .quicktrade .features-of-quick-trade-HRxdjE {
-    top: 32%;
+    top: 34%;
     margin-left: -8%;
   }
   .quicktrade .group-7-HRxdjE {
-    top: 42%;
+    top: 46%;
     height: 91px;
+    margin-left: -10%;
   }
   .quicktrade .group-2-GyJUNH {
     margin-left: 10%;
@@ -1090,41 +1127,49 @@
     margin-top: 57%;
   }
   .quicktrade .group-3-ossvxU {
-    margin-top: 68%;
+    margin-top: 221px;
   }
-  .quicktrade .head {
-    font-size: 20px !important;
+  .quicktrade .a-summary-view-the-marketplace-JVMFxg {
+    left: 13px;
+    top: -138px;
   }
   .quicktrade .group-6-wbR61n {
     height: 232px;
-    left: 12px;
+    left: 0px;
     top: 45px;
   }
-  .quicktrade .word {
-    font-size: 8px !important;
-    line-height: 17px;
+  .quicktrade .head {
+    left: 0%;
   }
   .quicktrade .lines {
-    left: -30%;
+    left: 12%;
   }
   .quicktrade .group-5-dXBp89 {
     height: 468px;
     margin-top: 1%;
   }
-  .quicktrade .head {
-    font-size: 16px !important;
-  }
-  
-  .elip {
-    width: 2px !important;
-    height: 2px !important;
-    left: 10px !important;
+  .quicktrade .flex-col-dXBp89 {
+    margin-top: -33%;
   }
   .quicktrade .line-3-nlxkfa {
     height: 49px;
   }
   .quicktrade .image-11-0PZcXW {
     margin-top: 10%;
+  }
+  .quicktrade .view-your-reque-from-one-glance-5ODmit {
+    top: 109px;
+  }
+  .quicktrade .what-is-quick-t-ing-on-swaps-fx-HRxdjE {
+    left: 8px;
+  }
+  .quicktrade .the-activity-of-more-currencies-HRxdjE,
+  .quicktrade .features-of-quick-trade-HRxdjE,
+  .quicktrade .group-7-HRxdjE {
+    margin-left: 2%;
+  }
+  .quicktrade .active-swap-request-JVMFxg {
+    left: -2px;
   }
 }
 
@@ -1133,38 +1178,39 @@
 @media (max-width: 400px) {
   .quicktrade .grey-back-y1HRxC {
     top: 23px;
-    height: 104%;
+    height: 147%;
   }
   .quicktrade .swapslogoimage-transparent-y1HRxC {
-    margin-top: -10%;
+    margin-top: -6%;
     width: 1;
   }
   .quicktrade .swaps-fx-user-guide-y1HRxC {
-    font-size: 12px;
+    font-size: 18px;
     top: 48px;
   }
   .quicktrade .line-1-y1HRxC {
-    top: 69px;
+    top: 72px;
   }
   .quicktrade .swaps-fx-portal-user-guide-y1HRxC {
-    font-size: 17px;
-    line-height: 21px;
-    top: 134px;
+    font-size: 25.5px;
+    line-height: 26px;
+    top: 116px;
   }
   .quicktrade .everything-you-se-our-services-y1HRxC {
-    top: 177px;
-    font-size: 11px !important;
+    top: 169px; 
+    font-size: 16.9px !important;
     width: 153px;
     line-height: 14px;
   }
   .quicktrade .quick-trade-y1HRxC {
-    margin-top: 50px;
+    margin-top: 22%;
+    font-size: 23.5px !important;
   }
   .quicktrade .line-8-0xy0vn {
-    margin-top: 40px;
+    margin-top: 39%;
   }
   .quicktrade .line-9-0xy0vn {
-    margin-top: -23%;
+    margin-top: -30%;
   }
   .oswald-light-nero-35px {
     font-size: 21px !important;
@@ -1173,30 +1219,32 @@
     font-size: 10px !important;
   } 
   .quicktrade .the-activity-of-more-currencies-HRxdjE {
-    top: 11%;
+    top: 13%;
+    line-height: 22px;
   }
   .quicktrade .features-of-quick-trade-HRxdjE {
-    top: 28%;
-    margin-left: -9%;
+    top: 26%;
+  }
+  .quicktrade .a-summary-view-the-marketplace-JVMFxg {
+    left: 10px;
+    top: -141px;
+  }
+  .quicktrade .quick-swap-T8HKK8 {
+    margin-left: 6%;
   }
   .quicktrade .group-7-HRxdjE {
-    top: 37%;
+    top: 36%;
     height: 74px;
   }
   .quicktrade .easily-select-y-your-swap-order-T8HKK8 {
     line-height: 14px;
-  }
-  .quicktrade .head {
-    font-size: 12px !important;
+    margin-left: 1%;
   }
   .quicktrade .group-6-wbR61n {
     height: 208px;
   }
-  .quicktrade .word {
-    font-size: 5px !important;
-  }
   .quicktrade .lines {
-    left: -59%;
+    left: -14%;
   }
   .quicktrade .line-3-nlxkfa {
     height: 32px;
@@ -1207,20 +1255,11 @@
     top: 23px;
     left: 153px;
   }
-  .quicktrade .ellipse-1-5ODmit {
-    top: 3px;
+  .quicktrade .view-your-reque-from-one-glance-5ODmit {
+    top: 92px;
   }
-  .quicktrade .ellipse-2-5ODmit {
-    top: 38px;
-  }
-  .quicktrade .ellipse-3-5ODmit {
-    top: 93px;
-  }
-  .quicktrade .ellipse-4-5ODmit {
-    top: 144px;
-  }
-  .quicktrade .ellipse-5-5ODmit {
-    top: 154px;
+  .quicktrade .flex-col-dXBp89 {
+    margin-top: -46%;
   }
 }
 
@@ -1228,32 +1267,19 @@
 
 @media (max-width: 300px) {
   .quicktrade .grey-back-y1HRxC {
-    height: 123%;
-  }
-  .quicktrade .swapslogoimage-transparent-y1HRxC {
-    margin-top: -7%;
+    height: 144%;
   }
   .quicktrade .swaps-fx-user-guide-y1HRxC {
-    font-size: 10px;
+    font-size: 15px;
     top: 42px;
   }
   .quicktrade .line-1-y1HRxC {
-    top: 59px;
-  }
-  .quicktrade .swaps-fx-portal-user-guide-y1HRxC {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  .quicktrade .everything-you-se-our-services-y1HRxC {
-    top: 133px;
-    font-size: 9px !important;
-    width: 159px;
+    top: 63px;
   }
   .quicktrade .quick-trade-y1HRxC {
-    font-size: 14px;
-    margin-top: 63px;
+   top: 89%;
   }
   .quicktrade .line-8-0xy0vn {
-    margin-top: 52px;
+    margin-top: 79px;
   }
 }
