--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -538,7 +538,7 @@
   }
   .sign-in .sign-in-y1HRxC {
     margin-top: 22%;
-    font-size: 23.5 !important;
+    font-size: 23.5px !important;
   }
   .sign-in .line-5-0xy0vn {
     margin-top: 39%;
